update peer dependency

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": ">=16.0.0",
     "react-native": ">=0.60.0",
     "react-native-device-info": ">=10.0.0",
+    "react-native-fs": ">=2.20.0",
     "react-native-zip-archive": ">=6.0.0"
   },
   "keywords": [
