--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,4 +11,5 @@ android {
 
 dependencies {
     implementation "com.facebook.react:react-native:+"  // RN auto-linked
+    implementation "com.squareup.okhttp3:okhttp:4.10.0"
 }
