--- a/package.json
+++ b/package.json
@@ -17,12 +17,8 @@
     "test": "jest"
   },
   "peerDependencies": {
-    "@react-native-async-storage/async-storage": ">=1.0.0",
     "react": ">=16.0.0",
-    "react-native": ">=0.60.0",
-    "react-native-device-info": ">=10.0.0",
-    "react-native-fs": ">=2.20.0",
-    "react-native-zip-archive": ">=6.0.0"
+    "react-native": ">=0.60.0"
   },
   "keywords": [
     "ota",
